--- a/phonecloud/www/home.html
+++ b/phonecloud/www/home.html
@@ -1138,8 +1138,8 @@ xmlhttp.send();
             <h3>Create a subfolder:</h3> 
             <div id="sublength"></div>
             <div id="subfoldermsg"></div> 
-            <div id="xfoldertxt"></div> 
-            <div id="xsubfoldertxt"></div> 
+            <!--<div id="xfoldertxt"></div>
+            <div id="xsubfoldertxt"></div> -->
     		<input type="hidden" id="xfolder" value="" />
     		<input type="hidden" id="xsubfolder" value="" />
             <input type="text" name="subfoldercon" id="subfoldercon" value="" placeholder="subfolder name..." data-theme="a">
